Fix LaTex and introduce hotkeys

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -15,7 +15,7 @@
 \usepackage{setspace}
 \usepackage{floatrow}
 \usepackage{tikz}
-\usepackage{tkz-graph}
+%\usepackage{tkz-graph}
 \usepackage[noline]{algorithm2e}
 \usepackage{multirow}
 \usepackage{minted} % Syntax highlighting for algorithms
