--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -18,7 +18,7 @@
 %\usepackage{tkz-graph}
 \usepackage[noline]{algorithm2e}
 \usepackage{multirow}
-\usepackage{minted} % Syntax highlighting for algorithms
+\usepackage[cache=false]{minted} % Syntax highlighting for algorithms \usepackage[outputdir=out,cache=false]{minted}
 \usepackage{enumitem} % More enumeration styles, e.g. Roman numbers, http://ctan.org/pkg/enumitem
 %\usepackage[htt]{hyphenat} % Allow hyphenation, even for for \texttt{}
 \usepackage{lmodern} % Fix some unfedined font shapes http://ctan.org/pkg/lm
