--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -23,3 +23,10 @@
   year={2000},
   publisher={University of California, Irvine Irvine}
 }
+
+@article{raymond2003compactness,
+  title={Compactness and Orthogonality},
+  author={Raymond, Eric Steven},
+  journal={The Art of Unix Programming},
+  year={2003}
+}
