--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -30,3 +30,8 @@
   journal={The Art of Unix Programming},
   year={2003}
 }
+
+@inproceedings{szudzik2006elegant,
+  title={An elegant pairing function},
+  author={Szudzik, Matthew}
+}
