--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -40,6 +40,7 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
+\newtheorem{commentary}{Comment}
 
 \usetikzlibrary{plotmarks,trees,arrows}
 \usetikzlibrary{graphs,graphs.standard}
