--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -28,6 +28,7 @@
 %\usepackage{libertine}
 \usepackage{inconsolata} % Better monospace font
 \usepackage[]{algorithm2e} % Algorithms
+\usepackage{pgf-umlsd} % UML Sequence diagrams
 
 
 %\usepackage[
