--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -35,3 +35,32 @@
   title={An elegant pairing function},
   author={Szudzik, Matthew}
 }
+
+@article{hohman2020communicating,
+  title={Communicating with Interactive Articles},
+  author={Hohman, Fred and Conlen, Matthew and Heer, Jeffrey and Chau, Duen Horng Polo},
+  journal={Distill},
+  volume={5},
+  number={9},
+  pages={e28},
+  year={2020}
+}
+
+@article{hundhausen2002meta,
+  title={A meta-study of algorithm visualization effectiveness},
+  author={Hundhausen, Christopher D and Douglas, Sarah A and Stasko, John T},
+  journal={Journal of Visual Languages \& Computing},
+  volume={13},
+  number={3},
+  pages={259--290},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@incollection{naps2002exploring,
+  title={Exploring the role of visualization and engagement in computer science education},
+  author={Naps, Thomas L and R{\"o}{\ss}ling, Guido and Almstrum, Vicki and Dann, Wanda and Fleischer, Rudolf and Hundhausen, Chris and Korhonen, Ari and Malmi, Lauri and McNally, Myles and Rodger, Susan and others},
+  booktitle={Working group reports from ITiCSE on Innovation and technology in computer science education},
+  pages={131--152},
+  year={2002}
+}
