--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -26,10 +26,9 @@
 \usepackage{lmodern} % Fix some unfedined font shapes http://ctan.org/pkg/lm
 %\usepackage{anyfontsize} % Fix some unavailable font sizes
 %\usepackage{libertine}
-\usepackage{inconsolata} % Better monospace font
+\usepackage{inconsolata} % Nicer monospace font
 \usepackage[]{algorithm2e} % Algorithms
-\usepackage{pgf-umlsd} % UML Sequence diagrams
-
+\usepackage{pgf-umlsd} % UML sequence diagrams
 
 %\usepackage[
 %backend=biber,
