--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,9 @@
+@article{moerkotte2009building,
+  title={Building Query Compilers (Under Construction)[expected time to completion: 5 years]},
+  author={Moerkotte, Guido},
+  year={2009}
+}
+
 @inproceedings{moerkotte2006analysis,
   title={Analysis of two existing and one new dynamic programming algorithm for the generation of optimal bushy join trees without cross products},
   author={Moerkotte, Guido and Neumann, Thomas},
