--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -32,7 +32,7 @@
 \usepackage[nameinlink]{cleveref} % Change listing names
 
 \newenvironment{code}{\captionsetup{type=listing}}{}
-\SetupFloatingEnvironment{listing}{name=Data Structure}
+\SetupFloatingEnvironment{listing}{name=\textbf{Data Structure}}
 \crefname{listing}{Program code}{Program codes}
 
 %\usepackage[
