Fix tree join generator, document in Latex

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -46,6 +46,7 @@
 \newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
 \newtheorem{commentary}{Comment}
+\newtheorem{note}{Note}
 
 \usetikzlibrary{plotmarks,trees,arrows}
 \usetikzlibrary{graphs,graphs.standard}
