--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -31,6 +31,7 @@
 \usepackage{pgf-umlsd} % UML sequence diagrams
 \usepackage[nameinlink]{cleveref} % Change listing names
 
+\usetikzlibrary{shapes.multipart} % Used for stacks
 \newenvironment{code}{\captionsetup{type=listing}}{}
 \SetupFloatingEnvironment{listing}{name=\textbf{Data Structure}}
 \crefname{listing}{Program code}{Program codes}
@@ -47,6 +48,7 @@
 \newtheorem{example}{Example}
 \newtheorem{commentary}{Comment}
 \newtheorem{note}{Note}
+\newtheorem{theorem}{Theorem}
 
 \usetikzlibrary{plotmarks,trees,arrows}
 \usetikzlibrary{graphs,graphs.standard}
