Add more Latex text

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -31,6 +31,7 @@
 \usepackage{pgf-umlsd} % UML sequence diagrams
 \usepackage[nameinlink]{cleveref} % Change listing names
 \usepackage{forest} % Used for directory trees
+\usepackage{fullwidth} % Allow full-width for algorithms
 
 \definecolor{folderbg}{RGB}{124,166,198}
 \definecolor{folderborder}{RGB}{110,144,169}
