--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -29,9 +29,12 @@
 \usepackage{inconsolata} % Nicer monospace font
 \usepackage[]{algorithm2e} % Algorithms
 \usepackage{pgf-umlsd} % UML sequence diagrams
+\usepackage{hyperref}
 \usepackage[nameinlink]{cleveref} % Change listing names
+\hypersetup{linktocpage}
 \usepackage{forest} % Used for directory trees
 \usepackage{fullwidth} % Allow full-width for algorithms
+\usepackage[binary-units=true]{siunitx} % SI units
 
 \definecolor{folderbg}{RGB}{124,166,198}
 \definecolor{folderborder}{RGB}{110,144,169}
