--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -36,6 +36,9 @@
 \usepackage{fullwidth} % Allow full-width for algorithms
 \usepackage[binary-units=true]{siunitx} % SI units
 
+\usepackage{tabularx,ragged2e}
+\newcolumntype{C}{>{\Centering\arraybackslash}X} % centered "X" column
+
 \definecolor{folderbg}{RGB}{124,166,198}
 \definecolor{folderborder}{RGB}{110,144,169}
 
@@ -91,7 +94,7 @@
 \clearpage
 \listofalgorithms
 \listoffigures
-%\listoftables
+\listoftables
 
 \include{chapters/1-introduction}
 \include{chapters/2-basics}
