Add some Latex Text

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -70,3 +70,10 @@
   pages={131--152},
   year={2002}
 }
+
+@book{trudeau2013introduction,
+  title={Introduction to graph theory},
+  author={Trudeau, Richard J},
+  year={2013},
+  publisher={Courier Corporation}
+}
