--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -34,7 +34,7 @@
 \hypersetup{linktocpage}
 \usepackage{forest} % Used for directory trees
 \usepackage{fullwidth} % Allow full-width for algorithms
-\usepackage[binary-units=true]{siunitx} % SI units
+\usepackage[binary-units=true]{siunitx} % SI units#
 
 \usepackage{tabularx,ragged2e}
 \newcolumntype{C}{>{\Centering\arraybackslash}X} % centered "X" column
@@ -71,7 +71,7 @@
 \newtheorem{example}{Example}
 \newtheorem{commentary}{Comment}
 \newtheorem{note}{Note}
-\newtheorem{theorem}{Theorem}
+\newtheorem{conjecture}{Conjecture}
 
 \usetikzlibrary{plotmarks,trees,arrows}
 \usetikzlibrary{graphs,graphs.standard}
@@ -100,7 +100,7 @@
 \include{chapters/2-basics}
 \include{chapters/3-concepts}
 \include{chapters/4-implementation}
-\include{chapters/5-analysis}
+%\include{chapters/5-analysis}
 \include{chapters/6-conclusion}
 
 \bibliographystyle{IEEEtran}
