Final LaTex text

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -23,7 +23,7 @@
 \usepackage{multirow}
 \usepackage{enumitem} % More enumeration styles, e.g. Roman numbers, http://ctan.org/pkg/enumitem
 %\usepackage[htt]{hyphenat} % Allow hyphenation, even for for \texttt{}
-\usepackage{lmodern} % Fix some unfedined font shapes http://ctan.org/pkg/lm
+\usepackage{lmodern} % Fix some undefined font shapes http://ctan.org/pkg/lm
 %\usepackage{anyfontsize} % Fix some unavailable font sizes
 %\usepackage{libertine}
 \usepackage{inconsolata} % Nicer monospace font
@@ -86,8 +86,25 @@
 \author{Steffen Waldmann}
 
 \begin{document}
-
-\maketitle
+\begin{titlepage}
+  \vspace*{2cm}
+   \begin{center}
+     {\Large A Toolset For Visualizing Algorithms On Query Graphs\\
+    \vspace{2cm} 
+     }
+     {\Large Master's Thesis}\\ \vspace{2cm}
+     {Submitted to the\\
+       Chair of Practical Computer Science III\\
+       Prof. Dr. G. Moerkotte\\
+       University of Mannheim\\} \vspace{2cm}
+     { Submitted by\\
+       Steffen Waldmann\\
+       Matriculation Number 1418219\\
+       \vspace{2cm}
+       October 2020 }
+  \end{center}
+\end{titlepage}
+  
 \clearemptydoublepage
 
 \tableofcontents
