--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -136,6 +136,6 @@ vorgelegen.\\
 Ich bin mir bewusst, dass eine falsche Erklärung rechtliche Folgen haben
 wird.\\ \\ \\ \\
 \vspace{2cm}
-Mannheim, den \today \hspace{4cm} Unterschrift  \\
+Mannheim, den 31. Oktober 2020 \hspace{4cm} Unterschrift  \\
 
 \end{document}
